--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,5 @@ main:
     url: /teaching/    
     
   - title: "CV"
-    url: /Users/andrealeone-thide/Documents/Employment/website/andrealeonethide.github.io/files/CV_2025-2026.pdf
+    url: /files/CV_2025-2026.pdf
     target: _blank
